--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,8 +65,8 @@ jobs:
           - uses: actions/cache@v5
             with:
               path: ~/ccache.tar.xz
-              key: wasm-${{ matrix.name }}-${{ steps.get-time.outputs.time }}
-              restore-keys: wasm-${{ matrix.name }}-
+              key: wasm-${{ steps.get-time.outputs.time }}
+              restore-keys: wasm-
           - name: Unpack cache
             run: cd ~ && [ -f ccache.tar.xz ] && tar xf ccache.tar.xz || true
           - name: Checkout Repository
