--- a/platforms/android/project/app/src/main/AndroidManifest.xml
+++ b/platforms/android/project/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
 		android:hasCode="false"
+		android:icon="@mipmap/ic_launcher"
 		android:theme="@android:style/Theme.NoTitleBar"
 		android:label="@string/app_name"
 		tools:targetApi="21">
