--- a/platforms/android/project/app/build.gradle
+++ b/platforms/android/project/app/build.gradle
@@ -14,7 +14,7 @@ android {
     sourceSets.main {
         res.srcDirs = [
                 'src/main/res',
-                '../../../../game/assets/app/icons'
+                '../../../../game/assets/app/mipmap'
         ]
     }
 
