--- a/platforms/sdl/sdl2/android/app/build.gradle
+++ b/platforms/sdl/sdl2/android/app/build.gradle
@@ -32,7 +32,7 @@ android {
         assets.srcDir '../../../../../game'
         res.srcDirs = [
                 'src/main/res',
-                '../../../../../game/assets/app/icons'
+                '../../../../../game/assets/app/mipmap'
         ]
     }
     externalNativeBuild {
