--- a/platforms/android/project/app/src/main/AndroidManifest.xml
+++ b/platforms/android/project/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
 		android:hasCode="false"
-		android:icon="@mipmap/ic_launcher"
 		android:theme="@android:style/Theme.NoTitleBar"
 		android:label="@string/app_name"
+		android:icon="@mipmap/icon"
 		tools:targetApi="21">
 		
 		<!-- Create a native activity class -->
