--- a/platforms/android/project/app/build.gradle
+++ b/platforms/android/project/app/build.gradle
@@ -12,10 +12,29 @@ android {
         into 'src/main/assets'
     }
     sourceSets.main {
-        res.srcDirs = [
-                'src/main/res',
-                '../../../../game/assets/app/mipmap'
+        // Another hack to automatically get our icons
+        assets.srcDir '../../../../game/assets/app'
+        def iconDir = file('../../../../game/assets/app/mipmap')
+        def resDir = file('src/main/res')
+        def densityMap = [
+                'icon_48x48.png'  : 'mipmap-mdpi',
+                'icon_72x72.png'  : 'mipmap-hdpi',
+                'icon_96x96.png'  : 'mipmap-xhdpi',
+                'icon_144x144.png': 'mipmap-xxhdpi',
+                'icon_192x192.png': 'mipmap-xxxhdpi'
         ]
+
+        densityMap.each { fileName, folderName ->
+            def sourceFile = new File(iconDir, fileName)
+            def targetDir = new File(resDir, folderName)
+            if (sourceFile.exists()) {
+                targetDir.mkdirs()
+                // Copies and renames it to just "icon.png" so AndroidManifest.xml is happy
+                new File(targetDir, 'icon.png').bytes = sourceFile.bytes
+            } else {
+                println "Warning: Could not find ${fileName} in ${iconDir}"
+            }
+        }
     }
 
     applicationVariants.all { variant ->
