--- a/platforms/windows/projects/MinecraftClient.Win32/MinecraftClient.Win32.vcxproj.filters
+++ b/platforms/windows/projects/MinecraftClient.Win32/MinecraftClient.Win32.vcxproj.filters
@@ -42,7 +42,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="$(MC_ROOT)\game\assets\app\icon\icon.ico">
+    <Image Include="$(MC_ROOT)\game\assets\app\icons\icon.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
