--- a/platforms/android/project/app/src/main/AndroidManifest.xml
+++ b/platforms/android/project/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 		android:hasCode="false"
 		android:theme="@android:style/Theme.NoTitleBar"
 		android:label="@string/app_name"
+		android:icon="@mipmap/icon"
 		tools:targetApi="21">
 		
 		<!-- Create a native activity class -->
