--- a/platforms/sdl/sdl2/android/app/build.gradle
+++ b/platforms/sdl/sdl2/android/app/build.gradle
@@ -30,6 +30,28 @@ android {
     sourceSets.main {
         java.srcDir '../../../../../thirdparty/SDL2/src/android-project/app/src/main/java'
         assets.srcDir '../../../../../game'
+        // Automatically get our icons
+        def iconDir = file('../../../../../game/assets/app/icons/mipmap')
+        def resDir = file('src/main/res')
+        def densityMap = [
+                'icon_48x48.png': 'mipmap-mdpi',
+                'icon_72x72.png': 'mipmap-hdpi',
+                'icon_96x96.png': 'mipmap-xhdpi',
+                'icon_144x144.png': 'mipmap-xxhdpi',
+                'icon_192x192.png': 'mipmap-xxxhdpi'
+        ]
+
+        densityMap.each { fileName, folderName ->
+            def sourceFile = new File(iconDir, fileName)
+            def targetDir = new File(resDir, folderName)
+            if (sourceFile.exists()) {
+                targetDir.mkdirs()
+                // Copies and renames it to just "icon.png" so AndroidManifest.xml is happy
+                new File(targetDir, 'icon.png').bytes = sourceFile.bytes
+            } else {
+                println "Warning: Could not find ${fileName} in ${iconDir}"
+            }
+        }
     }
     externalNativeBuild {
         cmake {
