--- a/platforms/sdl/sdl2/android/app/src/main/AndroidManifest.xml
+++ b/platforms/sdl/sdl2/android/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:label="@string/app_name"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/icon"
         android:allowBackup="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
         android:hardwareAccelerated="true">
