--- a/platforms/sdl/sdl2/android/app/build.gradle
+++ b/platforms/sdl/sdl2/android/app/build.gradle
@@ -1,25 +1,31 @@
 apply plugin: 'com.android.application'
 
+def useCcache = System.getenv("USE_CCACHE") == "1"
+
 android {
-    compileSdk 34
+    compileSdk 36
     defaultConfig {
         applicationId 'io.github.reminecraftpe'
         minSdkVersion 21
         //noinspection EditedTargetSdkVersion
-        targetSdkVersion 34
+        targetSdkVersion 36
         versionCode 1
         versionName '1.0'
         externalNativeBuild {
             cmake {
-                arguments '-DANDROID_PLATFORM=android-21', '-DANDROID_STL=c++_static'
+                arguments '-DANDROID_PLATFORM=android-21', '-DANDROID_STL=c++_static', '-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON'
                 abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+                if (useCcache) {
+                    arguments += '-DCMAKE_C_COMPILER_LAUNCHER=ccache'
+                    arguments += '-DCMAKE_CXX_COMPILER_LAUNCHER=ccache'
+                }
             }
         }
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     applicationVariants.configureEach { variant ->
@@ -56,11 +62,11 @@ android {
     externalNativeBuild {
         cmake {
             path '../../../../../CMakeLists.txt'
-            version '3.22.1'
+            version = '3.22.1'
         }
     }
     lint {
-        abortOnError false
+        abortOnError = false
     }
-    namespace 'io.github.reminecraftpe'
+    namespace = 'io.github.reminecraftpe'
 }
