--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -198,7 +198,7 @@ jobs:
           - name: Build
             run: |
                 cd ${{ matrix.directory }}
-                ./gradlew assembleDebug
+                ./gradlew assembleDebug -Pandroid.injected.ndk.abiFilters=arm64-v8a
             env:
                 USE_CCACHE: 1
                 CCACHE_COMPILERCHECK: "%compiler% -v"
