--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,12 +93,10 @@ jobs:
                 include:
                   - name: SDL 2
                     backend_name: 'SDL2'
-                    packages: 'libsdl2'
-                  # @NOTE: Uses SDL 1.2 compatibility layer in newer macOS versions, resulting in 30+ minutes spent building
-                  # and installing said layer each time the action is run. We're not doing that.
-                  #- name: SDL 1.2
-                  #  backend_name: 'SDL1'
-                  #  packages: 'libsdl'
+                    packages: 'sdl2'
+                  - name: SDL 1.2
+                    backend_name: 'SDL1'
+                    packages: 'sdl12-compat'
         name: macOS (${{ matrix.name }})
         runs-on: macos-15
         steps:
@@ -106,12 +104,8 @@ jobs:
             uses: actions/checkout@v6
             with:
                 submodules: true
-          - name: Install MacPorts
-            uses: melusina-org/setup-macports@v1
           - name: Install Dependencies
-            run: |
-                port selfupdate
-                port install ${{ matrix.packages }} +universal
+            run: brew install ${{ matrix.packages }}
           - name: Build macOS Archive
             run: |
                 cd platforms/macos/projects/Minecraft
@@ -121,6 +115,7 @@ jobs:
                 -configuration "Release [${{ matrix.backend_name }}] (Default)" \
                 -destination generic/platform=macOS \
                 GCC_PREPROCESSOR_DEFINITIONS='$(GCC_PREPROCESSOR_DEFINITIONS)' \
+                ARCHS=arm64 \
                 -quiet \
                 clean archive
 
@@ -203,7 +198,7 @@ jobs:
           - name: Build
             run: |
                 cd ${{ matrix.directory }}
-                ./gradlew assembleDebug
+                ./gradlew assembleDebug -Pandroid.injected.build.abi=arm64-v8a
             env:
                 USE_CCACHE: 1
                 CCACHE_COMPILERCHECK: "%compiler% -v"
