--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -111,7 +111,7 @@ jobs:
                 submodules: true
           - name: Install Dependencies
             run: brew install llvm@21
-          - name: Build macOS binary
+          - name: Build
             run: LLVM_CONFIG="$(brew --prefix)/opt/llvm@21/bin/llvm-config" ./platforms/macos/build.sh
           - name: Pack release
             run: |
@@ -143,7 +143,7 @@ jobs:
                     libplist-dev \
                     libssl-dev
 
-          - name: Build iOS binary
+          - name: Build
             run: ./platforms/ios/build.sh
             env:
               CLANG: clang-21
