Cache toolchain build for macOS and iOS artifacts (#510)

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -131,6 +131,10 @@ jobs:
         name: macOS
         runs-on: macos-15
         steps:
+          - name: Checkout Repository
+            uses: actions/checkout@v6
+            with:
+                submodules: true
           - name: Get Time
             id: get-time
             run: echo "time=$(date -u '+%Y-%m-%d-%H:%M:%S')" >> $GITHUB_OUTPUT
@@ -140,15 +144,18 @@ jobs:
               key: macos-artifact-${{ steps.get-time.outputs.time }}
               restore-keys: macos-artifact-
           - name: Unpack cache
-            run: cd ~ && [ -f ccache.tar.xz ] && tar xf ccache.tar.xz || true
-          - name: Checkout Repository
-            uses: actions/checkout@v6
-            with:
-                submodules: true
+            run: |
+              cd ~
+              [ -f ccache.tar.xz ] && tar xf ccache.tar.xz || true
+              [ -f workspacecache.tar ] && mv workspacecache.tar ${{ github.workspace }} || true
           - name: Install Dependencies
             run: brew install llvm@21 ccache
-          - name: Build macOS binary
-            run: LLVM_CONFIG="$(brew --prefix)/opt/llvm@21/bin/llvm-config" ./platforms/macos/build.sh
+          - name: Build
+            run: |
+              [ -f workspacecache.tar ] && tar xf workspacecache.tar || true
+              LLVM_CONFIG="$(brew --prefix)/opt/llvm@21/bin/llvm-config" ./platforms/macos/build.sh
+              tar cf workspacecache.tar platforms/macos/build/work/toolchain
+              mv workspacecache.tar ~
             env:
               NOSTRIP: 1
           - uses: actions/upload-artifact@v6
@@ -156,7 +163,7 @@ jobs:
               name: macOS
               path: platforms/macos/build/ReMCPE
           - name: Pack cache
-            run: cd ~ && tar cJf ccache.tar.xz Library/Caches/ccache
+            run: cd ~ && tar cJf ccache.tar.xz Library/Caches/ccache workspacecache.tar
 
     ios:
         strategy:
@@ -164,6 +171,10 @@ jobs:
         name: iOS
         runs-on: ubuntu-24.04
         steps:
+          - name: Checkout Repository
+            uses: actions/checkout@v6
+            with:
+                submodules: true
           - name: Get Time
             id: get-time
             run: echo "time=$(date -u '+%Y-%m-%d-%H:%M:%S')" >> $GITHUB_OUTPUT
@@ -173,11 +184,10 @@ jobs:
               key: ios-artifact-${{ steps.get-time.outputs.time }}
               restore-keys: ios-artifact-
           - name: Unpack cache
-            run: cd ~ && [ -f ccache.tar.xz ] && tar xf ccache.tar.xz || true
-          - name: Checkout Repository
-            uses: actions/checkout@v6
-            with:
-                submodules: true
+            run: |
+              cd ~
+              [ -f ccache.tar.xz ] && tar xf ccache.tar.xz || true
+              [ -f workspacecache.tar ] && mv workspacecache.tar ${{ github.workspace }} || true
           - name: Install Dependencies
             run: |
                 wget https://apt.llvm.org/llvm.sh
@@ -190,8 +200,12 @@ jobs:
                     libplist-utils \
                     libplist-dev \
                     libssl-dev
-          - name: Build iOS binary
-            run: ./platforms/ios/build.sh
+          - name: Build
+            run: |
+              [ -f workspacecache.tar ] && tar xf workspacecache.tar || true
+              ./platforms/ios/build.sh
+              tar cf workspacecache.tar platforms/ios/build/work/toolchain
+              mv workspacecache.tar ~
             env:
               CLANG: clang-21
               AR: llvm-ar-21
@@ -203,7 +217,7 @@ jobs:
               name: iOS
               path: platforms/ios/build/ReMCPE.ipa
           - name: Pack cache
-            run: cd ~ && tar cJf ccache.tar.xz .cache/ccache
+            run: cd ~ && tar cJf ccache.tar.xz .cache/ccache workspacecache.tar
 
     android:
         strategy:
